--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/shirongzheng/Railroad-Project.git"
+    "url": ""
   },
   "author": "",
   "license": "UNLICENSED",
   "bugs": {
-    "url": "https://github.com/shirongzheng/Railroad-Project/issues"
+    "url": ""
   },
-  "homepage": "https://github.com/shirongzheng/Railroad-Project#readme",
+  "homepage": "",
   "dependencies": {
     "body-parser": "1.18.2",
     "connect-pg-simple": "4.2.1",
